kubernetes/apps/postgres-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-api
  namespace: apps
  labels:
    app: postgres-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-api
  template:
    metadata:
      labels:
        app: postgres-api
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: postgres-api
          image: ghcr.io/gefmoura0601-bot/postgres-api-go:sha-100dec2
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
            successThreshold: 1
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 1
            failureThreshold: 3
            successThreshold: 1
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
