kubernetes/apps/postgres-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-api
  namespace: apps
spec:
  selector:
    app: postgres-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
