kubernetes/apps/postgres-api/authorizationpolicy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: postgres-api
  namespace: apps
spec:
  selector:
    matchLabels:
      app: postgres-api
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account

    - to:
        - operation:
            methods: ["GET"]
            paths:
              - /health
              - /readyz
              - /metrics
